fix(components/search-panel): fix prompt blocking content behind even closed

--- a/src/components/from-navigator/search-prompt.css
+++ b/src/components/from-navigator/search-prompt.css
@@ -1,6 +1,6 @@
 #navigator-toolbox {
   &:not(:focus-within) #urlbar,
-  #urlbar:not([breakout-extend]) {
+  #urlbar-container:not(:has(#urlbar[breakout-extend])) {
     left: 200%;
   }
 }
